2014-06-11  Jean-Louis Martineau <martineau@zmanda.com>
	* configure.in: Split in two files.
	* config/amanda/amanda_configure.m4: All global settings.
	* device-src/s3-util.h: Undef _

2014-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Installcheck/Rest.pm (): Better error if starman can't
	  be forked.
	* installcheck/Amanda_Rest_Configs.pl,
	  installcheck/Amanda_Rest_Dles.pl,
	  installcheck/Amanda_Rest_Dumps.pl,
	  installcheck/Amanda_Rest_Labels.pl,
	  installcheck/Amanda_Rest_Storages.pl,
	  installcheck/Amanda_Rest_Storages_Labels.pl,
	  installcheck/Amanda_Rest_Version.pl: Improve error message.

2014-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Installcheck/Rest.pm (remove_source_line): Function to
	  remove the source_line from all Message of a json reply.
	* installcheck/Amanda_Rest_Configs.pl,
	  installcheck/Amanda_Rest_Dles.pl,
	  installcheck/Amanda_Rest_Dumps.pl,
	  installcheck/Amanda_Rest_Labels.pl,
	  installcheck/Amanda_Rest_Storages.pl,
	  installcheck/Amanda_Rest_Storages_Labels.pl,
	  installcheck/Amanda_Rest_Version.pl: Use remove_source_line.

2014-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Installcheck/Rest.pm: Improve rest server startup.

2014-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/diskflat-device.c: Fix erase method.
	* perl/Amanda/Changer.pm: Many new Amanda::Changer::Message.
	* perl/Amanda/Label.pm: Allow to assign comment.
	* perl/Amanda/Rest/Storages/Labels.pm: Allow to assign comment.
	* installcheck/Amanda_Rest_Storages.pl: source_line change.
	* installcheck/Amanda_Rest_Storages_Labels.pl: Check The
	  storages/:STORAGE/labels endpoint.
	* installcheck/Installcheck/Rest.pm: Allow DELETE, improve rest
	  server startup.
	* installcheck/Makefile.am: Add Amanda_Rest_Storages_Labels.

2014-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Rest_Dumps.pl: More typos.
