@@ -1,3 +1,6 @@
+2014-06-12  Jean-Louis Martineau <martineau@zmanda.com>
+	* installcheck/taper.pl: Accept some log lines in varying order.
+
 2014-06-11  Jean-Louis Martineau <martineau@zmanda.com>
 	* configure.in: Split in two files.
 	* config/amanda/amanda_configure.m4: All global settings.
